QoL, extended drop zone reach

--- a/index.html
+++ b/index.html
@@ -664,18 +664,18 @@
             <fieldset class="poke-info" id="trainer-mons">
                 <legend align="center">TEAM/BOX</legend>
                 <div>
-                    <legend align="center">TEAM</legend>
+                    <legend class="dropzone" align="center">TEAM</legend>
                     <div id="team-poke-list" class="box-poke dropzone">
                     </div>
                 </div>
                 <hr>
                 <div>
-                    <legend align="center">BOX</legend>
+                    <legend class="dropzone" align="center">BOX</legend>
                     <div id="box-poke-list" class="box-poke dropzone">
                     </div>
                 </div>
                 <div>
-                    <legend align="center">BOX 2</legend>
+                    <legend class="dropzone" align="center">BOX 2</legend>
                     <div id="box-poke-list2" class="box-poke dropzone">
                     </div>
                 </div>
@@ -723,7 +723,7 @@
                 </div>
                 <hr>
                 <div>
-                    <legend align="center">TRASH ZONE</legend>
+                    <legend class="dropzone" align="center">TRASH ZONE</legend>
                     <div id="trash-box" class="box-poke dropzone">
                         
                     </div>
@@ -1814,7 +1814,7 @@
     <script type="text/javascript" src="./calc/result.js?9f8881b5"></script>
     <script type="text/javascript" src="./calc/adaptable.js?92e49194"></script>
     <script type="text/javascript" src="./calc/index.js?0b1745b9"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?01deeac8"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?f1c82b5c"></script>
     <script type="text/javascript" src="./js/index_randoms_controls.js?51d04109"></script>
     <script type="text/javascript" src="./js/moveset_import.js?cc6513d2"></script>
 </div>
