--- a/index.template.html
+++ b/index.template.html
@@ -664,18 +664,18 @@
             <fieldset class="poke-info" id="trainer-mons">
                 <legend align="center">TEAM/BOX</legend>
                 <div>
-                    <legend align="center">TEAM</legend>
+                    <legend class="dropzone" align="center">TEAM</legend>
                     <div id="team-poke-list" class="box-poke dropzone">
                     </div>
                 </div>
                 <hr>
                 <div>
-                    <legend align="center">BOX</legend>
+                    <legend class="dropzone" align="center">BOX</legend>
                     <div id="box-poke-list" class="box-poke dropzone">
                     </div>
                 </div>
                 <div>
-                    <legend align="center">BOX 2</legend>
+                    <legend class="dropzone" align="center">BOX 2</legend>
                     <div id="box-poke-list2" class="box-poke dropzone">
                     </div>
                 </div>
@@ -723,7 +723,7 @@
                 </div>
                 <hr>
                 <div>
-                    <legend align="center">TRASH ZONE</legend>
+                    <legend class="dropzone" align="center">TRASH ZONE</legend>
                     <div id="trash-box" class="box-poke dropzone">
                         
                     </div>
