--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                     <div class="gen-specific g2 g3 g4 g5 g6 g7 g8 g9">
                         <label for="itemL1">Item</label>
                         <select class="item terrain-trigger save-trigger calc-trigger" id="itemL1"></select>
-                        <button id="ball-item"><img src="https://raw.githubusercontent.com/msikma/pokesprite/master/items/ball/poke.png" alt=""></button>
+                        <button id="ball-item"><img src="https://raw.githubusercontent.com/msikma/pokesprite/master/items/key-item/berry-pouch.png" alt=""></button>
                     </div>
                     <div>
                         <label for="statusL1">Status</label>
@@ -1765,7 +1765,18 @@
                 <img class="berry-ta ic save-trigger"  src="https://raw.githubusercontent.com/msikma/pokesprite/master/items/berry/tanga.png" data-id="Tanga Berry">
                 <img class="berry-wa ic save-trigger"  src="https://raw.githubusercontent.com/msikma/pokesprite/master/items/berry/wacan.png" data-id="Wacan Berry">
                 <img class="berry-ya ic save-trigger"  src="https://raw.githubusercontent.com/msikma/pokesprite/master/items/berry/yache.png" data-id="Yache Berry">
-
+            </div>
+            <hr>
+            <legend>Berries</legend>
+            <div class="box-item-list">
+                <img class="ic save-trigger" src="https://raw.githubusercontent.com/msikma/pokesprite/master/items/berry/oran.png" data-id="Oran Berry">
+                <img class="ic save-trigger" src="https://raw.githubusercontent.com/msikma/pokesprite/master/items/berry/sitrus.png" data-id="Sitrus Berry">
+                <img class="ic save-trigger" src="https://raw.githubusercontent.com/msikma/pokesprite/master/items/berry/lum.png" data-id="Lum Berry">
+                <img class="ic save-trigger" src="https://raw.githubusercontent.com/msikma/pokesprite/master/items/berry/pecha.png" data-id="Pecha Berry">
+                <img class="ic save-trigger" src="https://raw.githubusercontent.com/msikma/pokesprite/master/items/berry/chesto.png" data-id="Chesto Berry">
+                <img class="ic save-trigger" src="https://raw.githubusercontent.com/msikma/pokesprite/master/items/berry/rawst.png" data-id="Rawst Berry">
+                <img class="ic save-trigger" src="https://raw.githubusercontent.com/msikma/pokesprite/master/items/berry/aspear.png" data-id="Aspear Berry">
+                <img class="ic save-trigger" src="https://raw.githubusercontent.com/msikma/pokesprite/master/items/berry/persim.png" data-id="Persim Berry">
             </div>
         </div>
     </div>
