Import are now pasted in the box in alphabetical order and added some guidance over the first time about the drag and drop mechanic

--- a/index.template.html
+++ b/index.template.html
@@ -726,7 +726,7 @@
                 <hr>
                 <div>
                     <legend class="dropzone" align="center">TRASH ZONE</legend>
-                    <div id="trash-box" class="box-poke dropzone">
+                    <div id="trash-box" class="box-poke dropzone" data-placeholder="">
                         
                     </div>
                     <button class="deadzone" id="trash-pok">Remove pokemon in the Trash</button>
