--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Pok&eacute;mon Damage Calculator</title>
     <link type="text/css" rel="stylesheet" href="./js/vendor/select2/select2.css" />
-    <link type="text/css" rel="stylesheet" href="./css/main.css?034757fe" />
+    <link type="text/css" rel="stylesheet" href="./css/main.css?c2e71b73" />
     <link type="text/css" rel="stylesheet" href="./css/vendor/bootstrap.css" />
     <link type="text/css" rel="stylesheet" href="./css/dark-theme.css" id="dark-theme-styles">
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -726,7 +726,7 @@
                 <hr>
                 <div>
                     <legend class="dropzone" align="center">TRASH ZONE</legend>
-                    <div id="trash-box" class="box-poke dropzone">
+                    <div id="trash-box" class="box-poke dropzone" data-placeholder="">
                         
                     </div>
                     <button class="deadzone" id="trash-pok">Remove pokemon in the Trash</button>
@@ -1827,9 +1827,9 @@
     <script type="text/javascript" src="./calc/result.js?9f8881b5"></script>
     <script type="text/javascript" src="./calc/adaptable.js?92e49194"></script>
     <script type="text/javascript" src="./calc/index.js?0b1745b9"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?d1680be6"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?0028818e"></script>
     <script type="text/javascript" src="./js/index_randoms_controls.js?54f8e1cb"></script>
-    <script type="text/javascript" src="./js/moveset_import.js?2c1cafd9"></script>
+    <script type="text/javascript" src="./js/moveset_import.js?1ea94d3d"></script>
 </div>
 
 <div class="credits">Modification by ForwardFeed Originaly Created by Honko, maintained by Austin and Kris, Special thanks to Hzla
