user can now change the width or the speed border

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Pok&eacute;mon Damage Calculator</title>
     <link type="text/css" rel="stylesheet" href="./js/vendor/select2/select2.css" />
-    <link type="text/css" rel="stylesheet" href="./css/main.css?c2e71b73" />
+    <link type="text/css" rel="stylesheet" href="./css/main.css?ffc3665a" />
     <link type="text/css" rel="stylesheet" href="./css/vendor/bootstrap.css" />
     <link type="text/css" rel="stylesheet" href="./css/dark-theme.css" id="dark-theme-styles">
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -721,6 +721,7 @@
                         <input type="checkbox" name="cc-spe-border" id="cc-spe-border" checked>speed border
                         <input type="checkbox" name="cc-ohko-color" id="cc-ohko-color" checked>OHKO color
                         <input type="checkbox" name="cc-auto-refr" id="cc-auto-refr" autocomplete="off">auto-refresh
+                        <input min="1" max="5" type="range" name="cc-spe-width" id="cc-spe-width">Speed Border width
                     </div>
                 </div>
                 <hr>
@@ -1827,7 +1828,7 @@
     <script type="text/javascript" src="./calc/result.js?9f8881b5"></script>
     <script type="text/javascript" src="./calc/adaptable.js?92e49194"></script>
     <script type="text/javascript" src="./calc/index.js?0b1745b9"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?0028818e"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?fc970a25"></script>
     <script type="text/javascript" src="./js/index_randoms_controls.js?54f8e1cb"></script>
     <script type="text/javascript" src="./js/moveset_import.js?1ea94d3d"></script>
 </div>
