--- a/index.template.html
+++ b/index.template.html
@@ -721,6 +721,7 @@
                         <input type="checkbox" name="cc-spe-border" id="cc-spe-border" checked>speed border
                         <input type="checkbox" name="cc-ohko-color" id="cc-ohko-color" checked>OHKO color
                         <input type="checkbox" name="cc-auto-refr" id="cc-auto-refr" autocomplete="off">auto-refresh
+                        <input min="1" max="5" type="range" name="cc-spe-width" id="cc-spe-width">Speed Border width
                     </div>
                 </div>
                 <hr>
