--- a/index.html
+++ b/index.html
@@ -1828,7 +1828,7 @@
     <script type="text/javascript" src="./calc/result.js?9f8881b5"></script>
     <script type="text/javascript" src="./calc/adaptable.js?92e49194"></script>
     <script type="text/javascript" src="./calc/index.js?0b1745b9"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?91c2fa59"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?a5d3b075"></script>
     <script type="text/javascript" src="./js/index_randoms_controls.js?b12818c8"></script>
     <script type="text/javascript" src="./js/moveset_import.js?1ea94d3d"></script>
 </div>
@@ -1839,11 +1839,14 @@
         <br>
         <li><a href="https://github.com/smogon/damage-calc/contributors" class="links-lighten" target="_blank">Smogon Contributors</a></li>
         <li><a href="https://www.smogon.com/forums/threads/pok%C3%A9mon-showdown-damage-calculator.3593546/" class="links-lighten" target="_blank">Smogon Bug Reports</a></li>
-        <li><a href="https://github.com/smogon/damage-calc" class="links-lighten" target="_blank">Smogong qGitHub repository</a></li></ul>
-    
+        <li><a href="https://github.com/smogon/damage-calc" class="links-lighten" target="_blank">Smogong qGitHub repository</a></li>
+    </ul>
+    <div id="sets">
         <button type="button" id="dark-theme-toggle"></button>
         <script type="text/javascript" src="./js/dark-theme-toggle.js?be118517"></script>
+        <button id="side-arrow-toggle" data-id="true">Hide Side Arrows</button>
     </div>
+</div>
 
 </body>
 
