feature: item box is now draggable

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Pok&eacute;mon Damage Calculator</title>
     <link type="text/css" rel="stylesheet" href="./js/vendor/select2/select2.css" />
-    <link type="text/css" rel="stylesheet" href="./css/main.css?ffc3665a" />
+    <link type="text/css" rel="stylesheet" href="./css/main.css?b3da57c4" />
     <link type="text/css" rel="stylesheet" href="./css/vendor/bootstrap.css" />
     <link type="text/css" rel="stylesheet" href="./css/dark-theme.css" id="dark-theme-styles">
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -1656,16 +1656,16 @@
             <span>Moves</span>
         </button>
     </div>
-    <div id="mid-pop-win" class="mid-pop-win" hidden>
-        <div class="pop-win-header">
+    <div id="item-box-frame" class="box-frame" hidden>
+        <div class="box-frame-header" data-x="500"data-y="500">
             <legend>Items</legend>
-            <div id="close-pop-win">
+            <div id="close-item-box">
                 <div class="mdiv">
                   <div class="md"></div>
                 </div>
               </div>
         </div>
-        <div class="pop-win-body">
+        <div class="item-box-body">
             <legend>Damage</legend>
             <div class="box-item-list">
                 <img class="ic save-trigger"src="https://raw.githubusercontent.com/msikma/pokesprite/master/items/hold-item/silk-scarf.png" data-id="Silk Scarf">
@@ -1787,6 +1787,7 @@
     <script type="text/javascript" src="./js/vendor/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="./js/vendor/select2/select2.min.js"></script>
     <script type="text/javascript" src="./js/vendor/url-search-params-0.1.2.min.js"></script>
+    <script type="text/javascript" src="./js/vendor/interact.min.js"></script>
     <script type="text/javascript">
         this.__createBinding = function(o, m, k) {
             o[k] = m[k];
@@ -1828,7 +1829,7 @@
     <script type="text/javascript" src="./calc/result.js?9f8881b5"></script>
     <script type="text/javascript" src="./calc/adaptable.js?92e49194"></script>
     <script type="text/javascript" src="./calc/index.js?0b1745b9"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?a5d3b075"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?9b3eadb2"></script>
     <script type="text/javascript" src="./js/index_randoms_controls.js?b12818c8"></script>
     <script type="text/javascript" src="./js/moveset_import.js?1ea94d3d"></script>
 </div>
