--- a/index.template.html
+++ b/index.template.html
@@ -1656,16 +1656,16 @@
             <span>Moves</span>
         </button>
     </div>
-    <div id="mid-pop-win" class="mid-pop-win" hidden>
-        <div class="pop-win-header">
+    <div id="item-box-frame" class="box-frame" hidden>
+        <div class="box-frame-header" data-x="500"data-y="500">
             <legend>Items</legend>
-            <div id="close-pop-win">
+            <div id="close-item-box">
                 <div class="mdiv">
                   <div class="md"></div>
                 </div>
               </div>
         </div>
-        <div class="pop-win-body">
+        <div class="item-box-body">
             <legend>Damage</legend>
             <div class="box-item-list">
                 <img class="ic save-trigger"src="https://raw.githubusercontent.com/msikma/pokesprite/master/items/hold-item/silk-scarf.png" data-id="Silk Scarf">
@@ -1787,6 +1787,7 @@
     <script type="text/javascript" src="./js/vendor/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="./js/vendor/select2/select2.min.js"></script>
     <script type="text/javascript" src="./js/vendor/url-search-params-0.1.2.min.js"></script>
+    <script type="text/javascript" src="./js/vendor/interact.min.js"></script>
     <script type="text/javascript">
         this.__createBinding = function(o, m, k) {
             o[k] = m[k];
