--- a/index.template.html
+++ b/index.template.html
@@ -694,27 +694,27 @@
                         <b class="mon-speed-T">Purple</b> Speed Tie
                         <b class="mon-speed-S">Black</b> Slower
                         <h5>OHKO Colors</h5>
-                        <b class="mon-dmg-W">Walls</b>(get 4 HKO at worse and does more damage)
+                        <b class="mon-dmg-WMO">Hard Counter</b> (Gets 4HKO'd at worse and may OHKO)
                         <br>
-                        <b class="mon-dmg-WMO">Walls may OHKO</b>(gets 4 HKO at worse and may OHKO)
+                        <b class="mon-dmg-W">Walls</b> (Gets 4HKO'd at worse and does more damage)
                         <br>
-                        <b class="mon-dmg-1">100% OHKO</b>
+                        <b class="mon-dmg-1">Always OHKOs</b>
                         <br>
-                        <b class="mon-dmg-2">May 0HKO</b>
+                        <b class="mon-dmg-2">Might OHKO</b>
                         <br>
-                        <b class="mon-dmg-3">May Get 0HKO</b>
+                        <b class="mon-dmg-3">Might get OHKO'd</b>
                         <br>
-                        <b class="mon-dmg-4">100% Get 0HKO</b>
+                        <b class="mon-dmg-4">Always gets OHKO'd</b>
                         <br>
-                        <b class="mon-dmg-14">Both side 100% OHKO</b>
+                        <b class="mon-dmg-14">Both sides OHKO each other</b>
                         <br>
-                        <b class="mon-dmg-23">Both side may OHKO</b>
+                        <b class="mon-dmg-23">Both sides might OHKO each other</b>
                         <br>
-                        <b class="mon-dmg-13">100% OHKO but may gets OHKO</b>
+                        <b class="mon-dmg-13">Always OHKOs but may get OHKO'd</b>
                         <br>
-                        <b class="mon-dmg-24">May 0HKO but 100% Get 0HKO</b>
+                        <b class="mon-dmg-24">Might OHKO but always gets OHKO'd</b>
                         <p>
-                            Note: Color codes are intended to be a helper, some caveats and quirks are missed by the calculation
+                            Note: Color coding is intended to help, though some caveats and quirks are missed
                         </p>
                     </div>
                     <div id ="cc-sets" hidden>
@@ -1079,6 +1079,12 @@
                         </tr>
                     </tbody>
                 </table>
+            </fieldset>
+        </div>
+        <div aria-label="Import team" role="region">
+            <fieldset class="note-button">
+                <legend align="center">Note</legend>
+                <button id="open-note">Open Notes</button>
             </fieldset>
         </div>
         <div aria-label="Import team" role="region">
@@ -1849,6 +1855,17 @@
     </div>
 </div>
 
+<div id="note-box-frame" class="box-frame" hidden>
+    <div class="box-frame-header" data-x="1220"data-y="200">
+        <legend>Notes</legend>
+        <div id="close-note-box">
+            <div class="mdiv">
+              <div class="md"></div>
+            </div>
+          </div>
+    </div>
+    <textarea cols="30" rows="10"></textarea>
+</div>
 </body>
 
 </html>
