--- a/index.template.html
+++ b/index.template.html
@@ -1852,6 +1852,7 @@
         <button type="button" id="dark-theme-toggle"></button>
         <script type="text/javascript" src="./js/dark-theme-toggle.js?"></script>
         <button id="side-arrow-toggle" data-id="true">Hide Side Arrows</button>
+        <a href="runandbun_script_imports.lua" download="lua_script_for_export">Download Lua Script</a>
     </div>
 </div>
 
