started building the 2v2 helper calc

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Pok&eacute;mon Damage Calculator</title>
     <link type="text/css" rel="stylesheet" href="./js/vendor/select2/select2.css" />
-    <link type="text/css" rel="stylesheet" href="./css/main.css?66837abc" />
+    <link type="text/css" rel="stylesheet" href="./css/main.css?8925fd60" />
     <link type="text/css" rel="stylesheet" href="./css/vendor/bootstrap.css" />
     <link type="text/css" rel="stylesheet" href="./css/dark-theme.css" id="dark-theme-styles">
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -1624,16 +1624,13 @@
             <fieldset class="poke-info" id="trainer-mons">
                 <legend align="center"> OPPOSING TEAM</legend>
                 <div class="trainer-poks">
-                    <div class="trainer-pok-list-opposing">
-                        <div class="trainer-pok-container">
-                            <img class="trainer-pok-opposing" src="https://play.pokemonshowdown.com/sprites/gen5/charizard.png" title="Focus Blast 120">
-                        </div>
+                    <div class="trainer-pok-list-opposing dropzone">
                     </div>
-                    <!--div class="trainer-pok-list-opposing2" hidden>
-                        <div class="trainer-pok-container2">
+                    <div id="trainer-pok-list-opposing2" hidden>
+                        <div id="trainer-pok-container2" class="dropzone">
                             
                         </div>
-                    </div-->
+                    </div>
                 </div>
                 <!--hr>
                 <button id="set-double-opp">Set in doubles</button-->
@@ -1835,7 +1832,7 @@
     <script type="text/javascript" src="./calc/result.js?9f8881b5"></script>
     <script type="text/javascript" src="./calc/adaptable.js?92e49194"></script>
     <script type="text/javascript" src="./calc/index.js?0b1745b9"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?608bba1a"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?d52166a9"></script>
     <script type="text/javascript" src="./js/index_randoms_controls.js?b12818c8"></script>
     <script type="text/javascript" src="./js/moveset_import.js?1ea94d3d"></script>
 </div>
