--- a/index.template.html
+++ b/index.template.html
@@ -1624,16 +1624,13 @@
             <fieldset class="poke-info" id="trainer-mons">
                 <legend align="center"> OPPOSING TEAM</legend>
                 <div class="trainer-poks">
-                    <div class="trainer-pok-list-opposing">
-                        <div class="trainer-pok-container">
-                            <img class="trainer-pok-opposing" src="https://play.pokemonshowdown.com/sprites/gen5/charizard.png" title="Focus Blast 120">
-                        </div>
+                    <div class="trainer-pok-list-opposing dropzone">
                     </div>
-                    <!--div class="trainer-pok-list-opposing2" hidden>
-                        <div class="trainer-pok-container2">
+                    <div id="trainer-pok-list-opposing2" hidden>
+                        <div id="trainer-pok-container2" class="dropzone">
                             
                         </div>
-                    </div-->
+                    </div>
                 </div>
                 <!--hr>
                 <button id="set-double-opp">Set in doubles</button-->
