side arrows are now opt-in

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <span id="damageValues2"></span>
         </div>
     </div>
-    <div class="left-side-pannel side-pannel">
+    <div class="left-side-pannel side-pannel" hidden>
         <button data-set="i-f-type" class="l-side-button">
             <i class="s-arrow arrowdown"></i>
             <span>Type</span>
@@ -1698,7 +1698,7 @@
             </fieldset>
         </div>
     </div>
-    <div class="right-side-pannel side-pannel">
+    <div class="right-side-pannel side-pannel" hidden>
         <button data-set="i-f-o-type" class="r-side-button">
             <i class="s-arrow arrowdown"></i>
             <span>Type</span>
@@ -1889,7 +1889,7 @@
     <script type="text/javascript" src="./calc/result.js?9f8881b5"></script>
     <script type="text/javascript" src="./calc/adaptable.js?92e49194"></script>
     <script type="text/javascript" src="./calc/index.js?0b1745b9"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?5b97890a"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?217d53c3"></script>
     <script type="text/javascript" src="./js/index_randoms_controls.js?2ad49438"></script>
     <script type="text/javascript" src="./js/moveset_import.js?1ea94d3d"></script>
 </div>
@@ -1905,7 +1905,7 @@
     <div id="sets">
         <button type="button" id="dark-theme-toggle"></button>
         <script type="text/javascript" src="./js/dark-theme-toggle.js?be118517"></script>
-        <button id="side-arrow-toggle" data-id="true">Hide Side Arrows</button>
+        <button id="side-arrow-toggle" data-id="true">Show Side Arrows</button>
         <a href="runandbun_script_imports.lua" download="lua_script_for_export">Download Lua Script</a>
     </div>
 </div>
