--- a/index.template.html
+++ b/index.template.html
@@ -178,7 +178,7 @@
             <span id="damageValues2"></span>
         </div>
     </div>
-    <div class="left-side-pannel side-pannel">
+    <div class="left-side-pannel side-pannel" hidden>
         <button data-set="i-f-type" class="l-side-button">
             <i class="s-arrow arrowdown"></i>
             <span>Type</span>
@@ -1698,7 +1698,7 @@
             </fieldset>
         </div>
     </div>
-    <div class="right-side-pannel side-pannel">
+    <div class="right-side-pannel side-pannel" hidden>
         <button data-set="i-f-o-type" class="r-side-button">
             <i class="s-arrow arrowdown"></i>
             <span>Type</span>
@@ -1905,7 +1905,7 @@
     <div id="sets">
         <button type="button" id="dark-theme-toggle"></button>
         <script type="text/javascript" src="./js/dark-theme-toggle.js?"></script>
-        <button id="side-arrow-toggle" data-id="true">Hide Side Arrows</button>
+        <button id="side-arrow-toggle" data-id="true">Show Side Arrows</button>
         <a href="runandbun_script_imports.lua" download="lua_script_for_export">Download Lua Script</a>
     </div>
 </div>
