opt-in for double legacy mode

--- a/index.template.html
+++ b/index.template.html
@@ -1906,6 +1906,7 @@
         <button type="button" id="dark-theme-toggle"></button>
         <script type="text/javascript" src="./js/dark-theme-toggle.js?"></script>
         <button id="side-arrow-toggle" data-id="true">Show Side Arrows</button>
+        <button id="double-legacy-mode">Doubles Modern</button>
         <a href="runandbun_script_imports.lua" download="lua_script_for_export">Download Lua Script</a>
     </div>
 </div>
