--- a/index.html
+++ b/index.html
@@ -1889,7 +1889,7 @@
     <script type="text/javascript" src="./calc/result.js?9f8881b5"></script>
     <script type="text/javascript" src="./calc/adaptable.js?92e49194"></script>
     <script type="text/javascript" src="./calc/index.js?0b1745b9"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?217d53c3"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?d4572822"></script>
     <script type="text/javascript" src="./js/index_randoms_controls.js?2ad49438"></script>
     <script type="text/javascript" src="./js/moveset_import.js?1ea94d3d"></script>
 </div>
@@ -1906,6 +1906,7 @@
         <button type="button" id="dark-theme-toggle"></button>
         <script type="text/javascript" src="./js/dark-theme-toggle.js?be118517"></script>
         <button id="side-arrow-toggle" data-id="true">Show Side Arrows</button>
+        <button id="double-legacy-mode">Doubles Modern</button>
         <a href="runandbun_script_imports.lua" download="lua_script_for_export">Download Lua Script</a>
     </div>
 </div>
