Added link to move AI flowchart

--- a/index.template.html
+++ b/index.template.html
@@ -1908,6 +1908,7 @@
         <button id="side-arrow-toggle" data-id="true">Show Side Arrows</button>
         <button id="double-legacy-mode">Doubles Modern</button>
         <a href="runandbun_script_imports.lua" download="lua_script_for_export">Download Lua Script</a>
+        <a href="img/AI_flowchart_R&B.png" target="_blank" rel="noopener noreferrer">Flowchart of the AI</a>
     </div>
 </div>
 
