Small QoL for doubles

--- a/index.template.html
+++ b/index.template.html
@@ -1689,7 +1689,9 @@
                 <div class="trainer-poks">
                     <div id="trainer-pok-list-opposing" class="trainer-pok-list-opposing dropzone calc-trigger">
                     </div>
-                    <div id="trainer-pok-list-opposing2" class="dropzone calc-trigger" hidden>
+                    <div id="trainer-pok-list-opposing2" class="dropzone calc-trigger" 
+                    data-placeholder=" For doubles you can drag & drop the opposing pokemons here,
+                     only the first one off each row will be calculated against. Top left always top calc and Bot left always bot calc" hidden>
                     </div>
                 </div>
                 <!--hr>
