--- a/index.html
+++ b/index.html
@@ -1689,7 +1689,9 @@
                 <div class="trainer-poks">
                     <div id="trainer-pok-list-opposing" class="trainer-pok-list-opposing dropzone calc-trigger">
                     </div>
-                    <div id="trainer-pok-list-opposing2" class="dropzone calc-trigger" hidden>
+                    <div id="trainer-pok-list-opposing2" class="dropzone calc-trigger" 
+                    data-placeholder=" For doubles you can drag & drop the opposing pokemons here,
+                     only the first one off each row will be calculated against. Top left always top calc and Bot left always bot calc" hidden>
                     </div>
                 </div>
                 <!--hr>
@@ -1892,7 +1894,7 @@
     <script type="text/javascript" src="./calc/result.js?9f8881b5"></script>
     <script type="text/javascript" src="./calc/adaptable.js?92e49194"></script>
     <script type="text/javascript" src="./calc/index.js?0b1745b9"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?b4e59b1c"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?98d09064"></script>
     <script type="text/javascript" src="./js/index_randoms_controls.js?e7f66825"></script>
     <script type="text/javascript" src="./js/moveset_import.js?1ea94d3d"></script>
 </div>
